add work page, fix capitalization and grammar, drop heroicons

--- a/app/page.mdx
+++ b/app/page.mdx
@@ -2,40 +2,10 @@ export const metadata = {
   title: 'Isaac Adewumi',
 }
 
-# isaac adewumi
+# Isaac Adewumi
 
-*software engineer in lagos, nigeria*
+*Software engineer in Lagos, Nigeria.*
 
-i write software, satisfy my curiosity, and when i'm not delivering shareholder value, you'll find me watching manchester united, gaming, or listening to music.
+I write software and satisfy my curiosity. When I'm not delivering shareholder value, you'll find me watching Manchester United, gaming, or listening to music.
 
----
-
-## work
-
-**[rotki](https://rotki.com)** python backend engineer, oct 2024 - present
-
-building an open source, local-first portfolio tracking tool that enables crypto users to analyze their defi activity.
-
-**[unyte](https://unyte.africa)** software engineer, jul 2024 - oct 2024
-
-contributed to an insurance infrastructure enabling businesses across africa to seamlessly embed and distribute insurance products via api integrations.
-
-**[flashpay](https://flashpay.finance)** lead developer & cofounder, may 2022 - jan 2024
-
-built fintech application on algorand blockchain to simplify payments, led technical architecture and development.
-
----
-
-## featured projects
-
-**[gistrunner](https://github.com/prettyirrelevant/gistrunner)** your go-to for running code snippets directly on github gist!
-
-**[wrapped-naira](https://github.com/prettyirrelevant/wrapped-naira)** a proof of concept fiat-to-crypto ramp, allowing users to easily convert naira into a stablecoin erc20 token.
-
-[all projects](/projects)
-
----
-
-## links
-
-[hi@enio.la](mailto:hi@enio.la) / [x.com](https://x.com/eniolawtf) / [github](https://github.com/prettyirrelevant) / [linkedin](https://www.linkedin.com/in/isaac-adewumi)
+You can learn more about my background through my [work](/work), [writings](/writings), and [projects](/projects), or reach me on [GitHub](https://github.com/prettyirrelevant), [X/Twitter](https://x.com/eniolawtf), [LinkedIn](https://www.linkedin.com/in/isaac-adewumi), and [email](mailto:hi@enio.la).
