--- a/app/projects/page.mdx
+++ b/app/projects/page.mdx
@@ -4,30 +4,30 @@ export const metadata = {
 
 import { Neuron, WrappedNaira, Gistrunner, Bridgebloc, Decodify, Waakye } from '@/components/project-logos'
 
-# projects
+# Projects
 
-some things i've built.
+Some things I've built over the years.
 
-## [<Neuron height={18} />](https://github.com/prettyirrelevant/final-year-project 'Neuron')
+## [<Neuron/>](https://github.com/prettyirrelevant/final-year-project 'Neuron')
 
-my undergraduate final year project. a student attendance system using bluetooth low energy with an esp32 microcontroller. the system includes a mobile app, an authentication server, and the iot component for handling bluetooth communication.
+My undergraduate final year project: a student attendance system using Bluetooth Low Energy with an ESP32 microcontroller. The system includes a mobile app, an authentication server, and an IoT component that handles the Bluetooth communication.
 
-## [<WrappedNaira height={18} />](https://github.com/prettyirrelevant/wrapped-naira 'Wrapped Naira')
+## [<WrappedNaira/>](https://github.com/prettyirrelevant/wrapped-naira 'Wrapped Naira')
 
-a proof of concept fiat-to-crypto ramp that allows users to convert naira into a stablecoin erc20 token. features a p2p exchange mechanism for seamless on/off-ramping between fiat and crypto.
+A proof-of-concept fiat-to-crypto ramp that lets users convert Naira into a stablecoin ERC-20 token. It features a P2P exchange mechanism for seamless on/off-ramping between fiat and crypto.
 
-## [<Gistrunner height={18} />](https://github.com/prettyirrelevant/gistrunner 'Gistrunner')
+## [<Gistrunner/>](https://github.com/prettyirrelevant/gistrunner 'Gistrunner')
 
-a sandbox environment for executing code snippets directly from github gists. supports multiple languages with isolated execution environments.
+A sandbox environment for executing code snippets directly from GitHub Gists, with support for multiple languages and isolated execution environments.
 
-## [<Bridgebloc height={18} />](https://github.com/prettyirrelevant/bridgebloc 'Bridgebloc')
+## [<Bridgebloc/>](https://github.com/prettyirrelevant/bridgebloc 'Bridgebloc')
 
-a token bridge for transferring assets across evm compatible chains. built during a hackathon to explore cross-chain interoperability patterns.
+A token bridge for transferring assets across EVM-compatible chains. Built during a hackathon to explore cross-chain interoperability patterns.
 
-## [<Decodify height={18} />](https://github.com/prettyirrelevant/decodify 'Decodify')
+## [<Decodify/>](https://github.com/prettyirrelevant/decodify 'Decodify')
 
-a browser extension that decodes etherscan transactions into human-readable format using rotki's transaction decoder. makes it easier to understand what on-chain transactions actually do.
+A browser extension that decodes Etherscan transactions into a human-readable format using Rotki's transaction decoder, making it easier to understand what on-chain transactions actually do.
 
-## [<Waakye height={18} />](https://github.com/prettyirrelevant/waakye 'Waakye')
+## [<Waakye/>](https://github.com/prettyirrelevant/waakye 'Waakye')
 
-a playlist converter that moves your music between spotify, youtube music, and deezer. handles matching tracks across platforms and preserving playlist metadata.
+A playlist converter that moves your music between Spotify, YouTube Music, and Deezer, handling track matching across platforms and preserving playlist metadata.
