--- a/app/_contents/not-found.mdx
+++ b/app/_contents/not-found.mdx
@@ -1,3 +1,3 @@
-# page not found
+# Page Not Found
 
-the page you are looking for does not exist. [return home](/).
+The page you are looking for does not exist. [Return home](/).
